# architus

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .pep8speaks.yml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  README.txt  Tiltfile  architus.yaml  bot.py  bot2.py  client.py  config.py  config_uwsgi.ini  create_db.sql  docker-compose.yml  docker-compose.yml.old  example.env  example.secrets.yaml  install.sh  kubernetes.yaml  models.py  regexer.py  reload-shard.sh  reload.sh  requirements.txt  secret.example.yaml  spectrum_gen.py  stress_test.py  wsgi.py
.github/: pull_request_template.md
api/: Dockerfile  Dockerfile.dockerignore  api.py  api.yaml  apitest.py  app.py  auth.py  config.py  config_uwsgi.ini  requirements.txt  settings.json  status_codes.py  stress_test.py  test.py  websocket.py
data/: autbot-seed.sql  spectrum_data.pgsql
db/: Dockerfile  Dockerfile.dockerignore  architus-seed.sql  bootstrap.py  db.yaml
feature-gate/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.tilt  Dockerfile.tilt.dockerignore  build.rs  config.default.toml  config.toml
feature-gate/grpc/: featuregate.rs  featuregate.rs.old
feature-gate/kube/dev/: feature-gate.yaml
feature-gate/kube/prod/: feature-gate.yaml
feature-gate/proto/: placeholder
feature-gate/src/: config.rs  lib.rs  models.rs  rpc.rs  schema.rs
feature-gate/tilt-build/: Dockerfile
lib/amqp-pool-rs/: Cargo.toml
lib/amqp-pool-rs/src/: lib.rs
lib/config-backoff-rs/: .gitignore  Cargo.toml
lib/config-backoff-rs/src/: lib.rs
lib/id-rs/: .gitignore  Cargo.toml
lib/id-rs/src/: lib.rs
lib/logs-lib-rs/: Cargo.toml  build.rs
lib/logs-lib-rs/src/: event.rs  extract.rs  lib.rs  rpc.rs  write.rs
lib/logs-lib-rs/src/content/: extract.rs  format.rs  mod.rs
logs/audit-scrape/: Cargo.toml
logs/audit-scrape/src/: main.rs  scrape.rs  utils.rs
logs/gateway-ingress/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.tilt  Dockerfile.tilt.dockerignore  build.rs  clippy.toml  config.default.toml  config.example.toml
logs/gateway-ingress/kube/dev/: logs-gateway-ingress.yaml
logs/gateway-ingress/kube/prod/: logs-gateway-ingress.yaml
logs/gateway-ingress/src/: active_guilds.rs  amqp_pool.rs  config.rs  connect.rs  connection.rs  debounced_pool.rs  filter.rs  main.rs  publish.rs  queue.rs  rpc.rs  testutils.rs
logs/gateway-ingress/src/uptime/: active_guilds.rs  connection.rs  debounced_pool.rs  mod.rs
logs/gateway-normalize/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.tilt  Dockerfile.tilt.dockerignore  build.rs  config.default.toml
logs/gateway-normalize/kube/dev/: logs-gateway-normalize.yaml
logs/gateway-normalize/kube/prod/: logs-gateway-normalize.yaml
logs/gateway-normalize/src/: audit_log.rs  config.rs  connect.rs  emoji.rs  event.rs  logs_lib.rs  main.rs  normalize.rs  reconnection.rs  rpc.rs  util.rs
logs/gateway-normalize/src/gateway/: mod.rs  path.rs  processors.rs  source.rs  sub_processors.rs
logs/gateway-normalize/src/gateway/processors/: interaction.rs  member.rs  message.rs  mod.rs  reaction.rs
logs/gateway-normalize/src/gateway_old/: channel.rs  mod.rs
logs/gateway-queue-lib/: Cargo.toml
logs/gateway-queue-lib/proto/: event.proto
logs/gateway-queue-lib/src/: benchmarks.rs  lib.rs
logs/ingress/: .gitignore  Cargo.toml  Dockerfile  build.rs  config.example.toml
logs/ingress/src/: audit_log.rs  config.rs  env.rs  event.rs  main.rs
logs/ingress/src/data/: mod.rs  processor.rs
logs/ingress/src/gateway/: channel.rs  mod.rs  sub_processors.rs
logs/lib/: Cargo.toml
logs/lib/proto/: logs.proto
logs/lib/src/: id.rs  lib.rs  time.rs
logs/logging/: Cargo.toml  Dockerfile  build.rs  config.example.toml
logs/logging/schema/: events-index.json
logs/logging/src/: config.rs  elasticsearch_api.rs  main.rs  stored_event.rs
logs/logging/src/graphql/: inputs.rs  json.rs  mod.rs
logs/scrape-consumer/: Cargo.toml  config.default.toml  config.toml
logs/scrape-consumer/src/: config.rs  convert.rs  main.rs  scrape.rs  utils.rs
logs/scrape-manager/: Cargo.toml  Rocket.toml  example_settings.toml
logs/scrape-manager/src/: api.rs  main.rs  work.rs
logs/search/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.tilt  Dockerfile.tilt.dockerignore  build.rs  config.default.toml
logs/search/kube/dev/: logs-search.yaml
logs/search/kube/prod/: logs-search.yaml
logs/search/schema/: events-index.json
logs/search/src/: config.rs  connect.rs  elasticsearch_api.rs  event.rs  fairings.rs  main.rs  proto.rs  rpc.rs  stored_event.rs
logs/search/src/elasticsearch/: filters.rs  mod.rs
logs/search/src/fairings/: mod.rs
logs/search/src/graphql/: enums.rs  event.rs  inputs.rs  json.rs  mod.rs  page_info.rs  snapshot.rs
logs/submission/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.tilt  Dockerfile.tilt.dockerignore  build.rs  clippy.toml  config.default.toml
logs/submission/kube/dev/: logs-submission.yaml
logs/submission/kube/prod/: logs-submission.yaml
logs/submission/schema/: event.proto  index_config.json
logs/submission/src/: config.rs  connect.rs  elasticsearch_api.rs  main.rs  rpc.rs  submission.rs  timeout.rs
logs/submission/src/elasticsearch/: api_bindings.rs  mod.rs
logs/uptime/: Cargo.toml  Dockerfile  Dockerfile.tilt  Dockerfile.tilt.dockerignore  build.rs  config.default.toml
logs/uptime/kube/dev/: logs-uptime.yaml
logs/uptime/kube/prod/: logs-uptime.yaml
logs/uptime/src/: config.rs  main.rs  rpc.rs
record-service/: Cargo.toml  Dockerfile  build.rs  config.default.toml
record-service/proto/: manager.proto  temp.txt
record-service/src/: config.rs  database.rs  handler.rs  main.rs  manager.rs  receiver.rs  zipper.rs
settings/: Cargo.toml  Dockerfile.tilt.dockerignore  build.rs
settings/src/: main.rs  rpc.rs
shard-rs/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  config.default.toml
shard-rs/kube/dev/: shard-rs.yaml
shard-rs/kube/prod/: shard-rs.yaml
shard-rs/src/: comic.rs  config.rs  connect.rs  main.rs  timeout.rs
(+318 files in other folders)
