[package]
name = "feature-gate"
version = "0.1.0"
authors = ["James Johnson <jjohnson474@gatech.edu>"]
edition = "2018"

[[bin]]
name = "feature-gate"
path = "src/bin/feature-gate.rs"

[lib]
name = "db"

[dependencies]
architus-config-backoff = { path = "../lib/config-backoff-rs" }
config = "0.11"
slog = "2.7"
sloggers = { version = "2.0", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
r2d2 = "0.8"
backoff = { version = "0.2", features = ["tokio"] }

[dependencies.diesel]
version = "1.4"
features = ["postgres", "r2d2"]

[build-dependencies]
tonic-build = "0.2"
