[package]
name = "mic"
version = "0.1.0"
authors = ["James Johnson <jjohnson474@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
tempfile = "3.1"
rand = "0.8"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
discortp = "0.2"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
amiquip = "0.4"

[dependencies.serenity]
default-features = false
features = ["client", "standard_framework", "voice", "rustls_backend", "cache"]
version = "0.10"

[dependencies.songbird]
version = "0.1"
features = ["driver", "serenity", "rustls"]

[build-dependencies]
tonic-build = "0.4"
