[package]
name = "shard-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-model = "0.8.4"
twilight-http = "0.8.4"
twilight-gateway = "0.8.3"
twilight-cache-inmemory = "0.8.4"
twilight-util = { version = "0.8.2", features = ["builder"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
sloggers = { version = "2.0", features = ["json"] }
anyhow = "1.0"
config = "0.11"
futures-util = "0.3.19"
reqwest = "0.11.9"
scraper = "0.12.0"
