[package]
name = "architus-config-backoff"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"
description = """\
Exposes a struct that can be used in a config to define a backoff::ExponentialBackoff behavior\
"""
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-humantime = "0.1"
backoff = { version = "0.2", features = [] }
