[package]
name = "audit-scrape"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-http = "0.6"
twilight-model = "0.6"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros"]
