[package]
name = "ingress"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
env_logger = "0.8"
tokio = { version = "0.3", features = ["rt-multi-thread", "macros"] }
tokio-compat-02 = "0.1.2"
futures = "0.3"
logs_lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
anyhow = "1.0"
clap = "2.33"
backoff = "0.1"
reqwest = "0.10"
twilight-gateway = "0.2"
twilight-model = "0.2"

[dependencies.jmespath]
git = "https://github.com/jmespath/jmespath.rs"
features = ["sync"]
