[package]
name = "ingress-service"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"

[dependencies]
logs_lib = { path = "../lib" }
clap = "2.33"
config = "0.10"
log = "0.4"
env_logger = "0.8"
lazy_static = "1.4"
static_assertions = "1.1.0"
anyhow = "1.0"
thiserror = "1.0.22"
tonic = "0.3"
prost = "0.6"
futures = "0.3"
# Using tokio v2 because twilight uses it
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-humantime = "0.1"
twilight-gateway = "0.2"
twilight-model = "0.2"
backoff = { version = "0.2", features = ["tokio"] }

[dependencies.jmespath]
git = "https://github.com/jmespath/jmespath.rs"
features = ["sync"]

[build-dependencies]
tonic-build = "0.3"
anyhow = "1.0"
