[package]
name = "logs_lib"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
log = "0.4.8"
serde_repr = "0.1"
mac_address = "1.0.3"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2.68"
