[package]
name = "scrape-consumer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-http = "0.6"
twilight-model = "0.6"
architus-logs-lib = { path = "../../lib/logs-lib-rs" }
scrape-manager = { path = "../scrape-manager/" }
reqwest = { version = "0.11", features = ["json"]}
slog = "2.7"
sloggers = { version = "2.0", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime-serde = "1.0"
config = "0.11"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros"]
