[package]
name = "scrape-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
twilight-http = "0.6"
twilight-model = "0.6"
log = "0.4"
config = '0.11'

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "time"]
