[package]
name = "logs-search"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"
description = """\
Provides a GraphQL API in front of the logs feature where logs are stored in Elasticsearch\
"""
license = "MIT"

[dependencies]
architus-id = { path = "../../lib/id-rs" }
config = "0.10"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tonic = "0.4"
prost = "0.7"
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
hyper = "0.14"
elasticsearch = "7.12.0-alpha.1"
base64 = "0.13"
juniper = { git = "https://github.com/engylemure/juniper", branch="tokio1" }
juniper_hyper = { git = "https://github.com/engylemure/juniper", branch="tokio1" }
strum = { version = "0.20", features = ["derive"] }
ref-cast = "1.0"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.4"
anyhow = "1.0"
