[package]
name = "logs-submission"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"
description = """\
Accepts individual log events and prepares them to be stored in an Elasticsearch store\
via a RabbtiMQ queue and  RMQ Logstash plugin.\
"""
license = "MIT"

[dependencies]
architus-id = { path = "../../lib/id-rs" }
architus-config-backoff = { path = "../../lib/config-backoff-rs" }
config = "0.10"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
thiserror = "1.0.22"
tonic = "0.4"
prost = "0.7"
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
backoff = { version = "0.3", features = ["tokio"] }
reqwest = "0.11"
bytes = "1.0"

[build-dependencies]
tonic-build = "0.3"
anyhow = "1.0"
