[package]
name = "logs-submission"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"
description = """\
Accepts individual log events and stores in an Elasticsearch store\
by chunking them together and sending Bulk Create requests.\
"""
license = "MIT"

[dependencies]
architus-config-backoff = { path = "../../lib/config-backoff-rs" }
config = "0.11"
slog = "2.7"
sloggers = { version = "2.0", features = ["json"] }
anyhow = "1.0"
tonic = "0.5"
prost = "0.8"
futures = "0.3"
futures-batch = "0.6"
tokio = { version = "1.8", features = ["rt", "rt-multi-thread", "time", "macros"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.9"
backoff = { version = "0.3", features = ["tokio"] }
bytes = "1.0"
elasticsearch = "7.12.0-alpha.1"
thiserror = "1"
base-62 = "0.1"

[build-dependencies]
tonic-build = "0.5"
anyhow = "1.0"
