[package]
name = "logs-uptime"
version = "0.1.0"
authors = ["Joseph Azevedo <joseph.az@gatech.edu>"]
edition = "2018"
description = """\
Runs as a gRPC server and takes messages from sharded gateway ingress services\
to gain information about how long the gateway ingress shards are online\
"""
license = "MIT"

[dependencies]
config = "0.11"
slog = "2.7"
sloggers = { version = "2.0", features = ["json"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"
anyhow = "1.0"
